# playground

./: .gitignore  README.md
app/tile-app/: README.txt  index.html  index.js  index.ts  package.json  style.css  tsconfig.json
lt/about-supabase/: .eslintignore  README.md  package-lock.json  package.json
lt/about-supabase/documents/: supabase.md
lt/about-supabase/src/pages/: index.tsx
report/: README.md
report/next-ts-graphql-codegen-rerender/: README.md  package-lock.json  package.json
report/next-ts-ternary-operator/: README.md  package-lock.json  package.json
report/next-ts-ternary-operator/components/: Button.tsx
report/next-ts-ternary-operator/pages/: index.tsx
report/nextjs-swc/: README.md  next.config.js  package-lock.json  package.json
report/nextjs-swc/components/: Sample.tsx
report/nextjs-swc/pages/: _app.tsx  index.tsx
report/nextjs-swc/types/: index.ts
report/supabase-graphql-encoded-string/: codegen.yml  package-lock.json  package.json  schema.graphql
report/supabase-graphql-encoded-string/components/: Form.tsx
report/supabase-graphql-encoded-string/pages/: _app.tsx  index.tsx
report/supabase-graphql-encoded-string/supabase/: config.toml  seed.sql  types.ts
report/supabase-graphql-encoded-string/utils/: supabaseClient.ts
rust/cli/nextjs-routes-type-gen/: Cargo.toml  README.md
rust/iced/calculator/: Cargo.toml
rust/iced/graphql-request/: Cargo.toml  sampleQuery.graphql  schema.graphql
rust/iced/graphql-request/sample/: practice.rs
rust/iced/graphql-request/src/: graphql.rs  main.rs
rust/iced/template/: Cargo.toml
(+12 files in other folders)
