[package]
edition = "2018"
name = "graphql-request"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.10.0"
iced = {version = "0.3.0", features = ["tokio"]}
reqwest = {version = "0.11.7", features = ["blocking"]}
